--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.0.6</version>
+        </dependency>
     </dependencies>
 
 
