--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
             <artifactId>hbase-client</artifactId>
             <version>2.0.6</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.swinglabs/swingx -->
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
     </dependencies>
 
 
