--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>1.6.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+
     </dependencies>
 
 
